--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Created by pixpalette.com - online design magazine -->
     <meta name="theme-color" content="#ffdf47">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Waiki x Gaex'e</title>
+    <title>Wawan Chahyo Nugroho</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,10 +39,10 @@ Created by pixpalette.com - online design magazine -->
             <div class="col-sm-5 left-wrapper">
                 <div class="event-banner-wrapper">
                     <div class="logo">
-                        <h1>Kemudahan akses untuk momen spesial Anda!</h1>
+                        <h1>Mobile Developer</h1>
                     </div>
 
-                    <h2>Waiki x Gaex'e
+                    <h2>Wawan Chahyo Nugroho
                         <span id="currentTime"></span>
                     </h2>
                 </div>
@@ -55,9 +55,10 @@ Created by pixpalette.com - online design magazine -->
                         <!-- Nav tabs -->
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" class="active"><a href="#buyTicket" aria-controls="buyTicket"
-                                    role="tab" data-toggle="tab">Home</a></li>
+                                    role="tab" data-toggle="tab">Portfolio</a></li>
                             <li role="presentation"><a href="#termCondition" aria-controls="termCondition" role="tab"
-                                    data-toggle="tab">Petunjuk</a></li>
+                                    data-toggle="tab">About Me</a></li>
+                            <li role="presentation"><a href="https://bundet.com/" target="_blank">Blog</a></li>
                         </ul>
 
                         <!-- Tab panes -->
@@ -80,7 +81,7 @@ Created by pixpalette.com - online design magazine -->
 
                                                 <div class="col-xs-6">
                                                     <div class="ticket-price-count-box">
-                                                        <div class="ticket-control">
+                                                        <!-- <div class="ticket-control">
                                                             <div class="input-group">
                                                                 <span class="input-group-btn">
                                                                     <button type="button"
@@ -102,7 +103,7 @@ Created by pixpalette.com - online design magazine -->
                                                                 </span>
                                                             </div>
 
-                                                        </div>
+                                                        </div> -->
                                                         <p class="price">Rp 7.000</p>
                                                     </div>
                                                 </div>
@@ -132,7 +133,7 @@ Created by pixpalette.com - online design magazine -->
 
                                                 <div class="col-xs-6">
                                                     <div class="ticket-price-count-box">
-                                                        <div class="ticket-control">
+                                                        <!-- <div class="ticket-control">
                                                             <div class="input-group">
                                                                 <span class="input-group-btn">
                                                                     <button type="button"
@@ -154,7 +155,7 @@ Created by pixpalette.com - online design magazine -->
                                                                 </span>
                                                             </div>
 
-                                                        </div>
+                                                        </div> -->
                                                         <p class="price">Rp 7.000</p>
                                                     </div>
                                                 </div>
@@ -184,7 +185,7 @@ Created by pixpalette.com - online design magazine -->
 
                                                 <div class="col-xs-6">
                                                     <div class="ticket-price-count-box">
-                                                        <div class="ticket-control">
+                                                        <!-- <div class="ticket-control">
                                                             <div class="input-group">
                                                                 <span class="input-group-btn">
                                                                     <button type="button"
@@ -206,7 +207,7 @@ Created by pixpalette.com - online design magazine -->
                                                                 </span>
                                                             </div>
 
-                                                        </div>
+                                                        </div> -->
                                                         <p class="price">Rp 7.000</p>
                                                     </div>
                                                 </div>
@@ -235,7 +236,7 @@ Created by pixpalette.com - online design magazine -->
 
                                                 <div class="col-xs-6">
                                                     <div class="ticket-price-count-box">
-                                                        <div class="ticket-control">
+                                                        <!-- <div class="ticket-control">
                                                             <div class="input-group">
                                                                 <span class="input-group-btn">
                                                                     <button type="button"
@@ -257,7 +258,7 @@ Created by pixpalette.com - online design magazine -->
                                                                 </span>
                                                             </div>
 
-                                                        </div>
+                                                        </div> -->
                                                         <p class="price">Rp 7.000</p>
                                                     </div>
                                                 </div>
