--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Created by pixpalette.com - online design magazine -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#ffdf47">
+    <meta name="theme-color" content="#424242">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Wawan Chahyo Nugroho</title>
@@ -319,7 +319,7 @@ Created by pixpalette.com - online design magazine -->
                             </div>
                             <div class="col-xs-6">
                                 <div class="text-right">
-                                    <a class="btn disabled" data-toggle="modal" data-target="#ticket-details">PROSES</a>
+                                    <a class="btn" data-toggle="modal" data-target="#ticket-details">CONTACT ME</a>
                                 </div>
                             </div>
                         </div>
