--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@ Created by pixpalette.com - online design magazine -->
                 img: "images/simboku.jpg",
                 hyperlink: "https://play.google.com/store/apps/details?id=com.simboku.trip_app&pcampaignid=web_share",
                 title: "Simbok-ku",
-                sub_title: "Production",
+                sub_title: "Flutter",
                 price_value: 180000,
-                price_display: "Flutter",
+                price_display: "Production",
                 description: `
                 * Connect midtrans<br>
                 * List product<br>
@@ -259,7 +259,7 @@ Created by pixpalette.com - online design magazine -->
                                                             </div>
 
                                                         </div>
-                                                        <p class="price">Rp ${item.price_display}</p>
+                                                        <p class="price">${item.price_display}</p>
                                                     </div>
                                                 </div>
                                             </div>
