--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ Created by pixpalette.com - online design magazine -->
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Nixie+One' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -73,51 +74,48 @@ Created by pixpalette.com - online design magazine -->
                                     Pune 411058</h4><br>
                             </div>
                             <div role="tabpanel" class="tab-pane fade" id="termCondition">
-                                <h4>BUNDET diberdayakan oleh admin sebagai media belajar tentang teknologi, algoritma
-                                    dan pemrograman. Dalam istilah jawa "bundet" berarti "kusut", menggambarkan betapa
-                                    kompleksnya suatu permasalahan yang dihadapi oleh seorang praktisi teknologi. Dimana
-                                    seorang electro technician, web developer, android programmer, engineer, blogger
-                                    berbagi pengalamannya melakukan troubleshooting, repairing, dan debugging.</h4>
-
-                                <h4>Motivasi admin dalam membangun blog ini bukan karena kepentingan profit, melainkan
-                                    lebih kepada kepentingan pendidikan atau untuk belajar bersama. Kadang pertanyaan
-                                    dari member atau pengunjung bisa membuka pikiran admin, kadang bisa mengingatkan
-                                    admin, bahkan ada juga yang mengoreksi admin</h4>
-
-                                <h4>BUNDET didesain admin guna memetakan ilmu yang pernah dipelajarinya, sehingga admin
-                                    tidak perlu kesusahan dalam mengingat ilmu tersebut bilamana diperlukan kembali.
-                                    Disamping itu, penempatan ilmu di lokal komputer juga tidak terstruktur dan rentan
-                                    terhadap virus, kecelakaan dan bencana alam.</h4>
-
-                                <h4>BUNDET adalah salah satu konsep belajar efektif admin, karena admin sadar bahwa
-                                    kemampuan otak admin sangat lemah dalam menghafal. Disamping itu, juga sebagai
-                                    bentuk ekspresi pemahaman suatu ilmu, bukan berarti hafal segalanya. Dan sebagai
-                                    pemicu bagi admin agar lebih giat lagi dalam belajar. Tidak ada BUNDET, dijamin
-                                    admin tidak akan pernah belajar lagi.</h4>
-
-                                <h4>Sementara itu, admin memilih Google sebagai sponsor dikarenakan admin tidak mau
-                                    membebani pengunjung untuk biaya operasional BUNDET, dan admin juga yakin bahwa
-                                    tidak ada pengunjung yang mau membayar untuk hal semacam ini, bukan begitu? :)</h4>
-
-                                <h4>Sementara ini, admin masih belum memikirkan tentang kepentingan profit, dikarenakan
-                                    admin masih dalam fase mencari ilmu sampai lulus dan berkompeten. Kalaupun admin
-                                    berniat mencari profit, maka keliru besar dan terlalu membuang-buang waktu jika
-                                    masih berkutat di BUNDET, harusnya admin bermain situs affiliasi, bermain situs
-                                    berbahasa inggris, berdagang, atau bekerja.</h4>
+                                <h4>Pengembang aplikasi Android berorientasi pada pengalaman pengguna yang baik.
+                                    Mengkonseptualisasikan solusi aplikasi dengan teknologi terkini dan desain UI/UX
+                                    yang proporsional. Mengevaluasi dan mengoptimalkan UI/UX untuk mencapai pengalaman
+                                    pengguna yang lebih baik. Pemahaman mendalam tentang Android Lifecycle, State
+                                    Management, Dependency Injection, Reactive Programming, Declarative UI and Error
+                                    Handling.</h4>
+                                <br>
+                                <h4>Berangkat dari keterbatasan dan mengupayakan kemajuan, bukan kesempurnaan.</h4>
+                                <br>
+                                <h4>Karir saya dimulai dari teknisi elektronik selama lebih dari 6 tahun, hal ini
+                                    membuat kemampuan saya kental dengan logika dan pemecahan masalah. Pada tahun ke-3
+                                    pengalaman itu, saya memiliki lingkaran orang-orang kreatif yang menunjukkan kepada
+                                    saya cara menghasilkan uang secara online, itulah sebabnya saya memulai Blogging dan
+                                    SEO hingga meninggalkan bidang elektronika. Terbiasa berinteraksi dengan hardware
+                                    dan logika elektronika sepertinya memberikan dampak positif terhadap saya dalam hal
+                                    mempelajari karakter robot perayap mesin pencari, termasuk pemrograman, debugging &
+                                    pemecahan masalah.</h4>
+                                <br>
+                                <h4>Di tahun ke-4 pengalaman itu, saya kembali terjun ke dunia pendidikan dengan belajar
+                                    sambil bekerja di perusahaan geodesi. Suatu ketika saya mengalami kegalauan karena
+                                    sudah tidak bisa lagi menyeimbangkan tanggung jawab saya sebagai mahasiswa IT dan
+                                    teknisi profesional, akhirnya saya mengambil keputusan berat untuk meninggalkan
+                                    dunia elektronika dan totalitas menekuni dunia IT, termasuk Programming, Blogging &
+                                    SEO.</h4>
+                                <br>
+                                <h4>Kematangan skill saya dibangun atas dasar wawasan berpikir kritis di dunia akademis
+                                    dan dunia industri.</h4>
+                                <br>
                                 <h4>
                                     <div class="alert alert-success" role="alert">
-                                        <a href="https://www.tokopedia.com/tokobundet/makaroni-bantet-bundet-extra-hot">
-                                            Tokopedia</a>
+                                        <div class="text-center center-block">
+                                            <a href="https://www.facebook.com/bootsnipp"><i id="social-fb"
+                                                    class="fa fa-facebook-square fa-3x social"></i></a>
+                                            <a href="https://twitter.com/bootsnipp"><i id="social-tw"
+                                                    class="fa fa-twitter-square fa-3x social"></i></a>
+                                            <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp"
+                                                    class="fa fa-google-plus-square fa-3x social"></i></a>
+                                            <a href="mailto:bootsnipp@gmail.com"><i id="social-em"
+                                                    class="fa fa-envelope-square fa-3x social"></i></a>
+                                        </div>
                                     </div>
                                 </h4>
-                                <h4>
-                                    <div class="alert alert-warning" role="alert">
-                                        <a
-                                            href="https://shopee.co.id/Makaroni-Bantet-Bundet-Pedas-Dan-Gurih-Kemasan-Box-i.240125673.18939489697?sp_atk=3bdda9b3-aeed-4559-a8dc-0efe6ca457c8&xptdk=3bdda9b3-aeed-4559-a8dc-0efe6ca457c8t">
-                                            Shopee</a>
-                                    </div>
-                                </h4>
-                                <br><br>
                             </div>
                         </div>
 
