--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Created by pixpalette.com - online design magazine -->
                             <li role="presentation" class="active"><a href="#buyTicket" aria-controls="buyTicket"
                                     role="tab" data-toggle="tab">Portfolio</a></li>
                             <li role="presentation"><a href="#termCondition" aria-controls="termCondition" role="tab"
-                                    data-toggle="tab">About Me</a></li>
+                                    data-toggle="tab">Tentangku</a></li>
                             <li role="presentation"><a href="https://bundet.com/" target="_blank">Blog</a></li>
                         </ul>
 
