--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Created by pixpalette.com - online design magazine -->
                                 <h4>
                                     <div class="alert alert-success" role="alert">
                                         <div class="text-center center-block">
-                                            <a href="https://www.facebook.com/bootsnipp"><i id="social-fb"
+                                            <a href="https://www.linkedin.com/in/wawanchahyonugroho" target="_blank"><i id="social-fb"
                                                     class="fa fa-linkedin-square fa-3x social"></i></a>
                                             <!-- <a href="https://twitter.com/bootsnipp"><i id="social-tw"
                                                     class="fa fa-twitter-square fa-3x social"></i></a>
@@ -126,7 +126,7 @@ Created by pixpalette.com - online design magazine -->
                         <div class="row">
                             <div class="col-xs-6">
                                 <p>
-                                    <span class="ticket-count"></span> Hire me 👉
+                                    <span class="ticket-count"></span> Mempekerjakan saya 👉
                                 </p>
                             </div>
                             <div class="col-xs-6">
@@ -211,7 +211,7 @@ Created by pixpalette.com - online design magazine -->
                 * List invoice
                 `
             },
-           {
+            {
                 img: "images/lesja.jpg",
                 hyperlink: "https://play.google.com/store/apps/details?id=com.bundet.lesja&hl=id&gl=US",
                 title: "Lesja",
@@ -226,6 +226,28 @@ Created by pixpalette.com - online design magazine -->
                 * Pemusnahan stok<br>
                 * Assembly<br>
                 * Repacking
+                `
+            },
+            {
+                img: "images/movie-made.jpg",
+                hyperlink: "https://gitlab.com/bundet/movie-catalogue-submissions",
+                title: "The Movie MADE",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Certification",
+                description: `
+                Final project sertifikasi Menjadi Android Developer Expert (MADE). Ditulis dalam kotlin, meskipun materi disampaikan dalam java.
+                `
+            },
+            {
+                img: "images/supercar.jpg",
+                hyperlink: "https://gitlab.com/gaexe/hfw-supercar-apps",
+                title: "Montir Supercar",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+                Aplikasi mekanik khusus supercar, dalam rangka memfasilitasi order secara online.
                 `
             },
 
