--- a/index.html
+++ b/index.html
@@ -241,6 +241,17 @@ Created by pixpalette.com - online design magazine -->
                 `
             },
             {
+                img: "images/esda.jpg",
+                hyperlink: "https://youtu.be/jce20RhcTHo",
+                title: "ESDA",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Production",
+                description: `
+                Aplikasi khusus orang tua/wali murid ESDA untuk memantau perkembangan anak mereka. ESDA adalah salah satu lembaga kursus 3D terbaik di Indonesia.
+                `
+            },
+            {
                 img: "images/supercar.jpg",
                 hyperlink: "https://gitlab.com/gaexe/hfw-supercar-apps",
                 title: "Montir Supercar",
@@ -251,6 +262,7 @@ Created by pixpalette.com - online design magazine -->
                 Aplikasi mekanik khusus supercar, dalam rangka memfasilitasi order secara online.
                 `
             },
+
 
         ];
 
