--- a/index.html
+++ b/index.html
@@ -252,6 +252,17 @@ Created by pixpalette.com - online design magazine -->
                 `
             },
             {
+                img: "images/chatrox.jpg",
+                hyperlink: "https://youtu.be/TOW6T951zF8",
+                title: "Chatrox",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+                Aplikasi ini untuk melayani konselor, moderator, dan pasien yang akan diproyeksikan ke situs ini: dokter.my dan biru.id.
+                `
+            },
+            {
                 img: "images/supercar.jpg",
                 hyperlink: "https://gitlab.com/gaexe/hfw-supercar-apps",
                 title: "Montir Supercar",
