publish gitlab project

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ Created by pixpalette.com - online design magazine -->
                                 <h4>
                                     <div class="alert alert-success" role="alert">
                                         <div class="text-center center-block">
-                                            <a href="https://www.linkedin.com/in/wawanchahyonugroho" target="_blank"><i id="social-fb"
-                                                    class="fa fa-linkedin-square fa-3x social"></i></a>
+                                            <a href="https://www.linkedin.com/in/wawanchahyonugroho" target="_blank"><i
+                                                    id="social-fb" class="fa fa-linkedin-square fa-3x social"></i></a>
                                             <!-- <a href="https://twitter.com/bootsnipp"><i id="social-tw"
                                                     class="fa fa-twitter-square fa-3x social"></i></a>
                                             <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp"
@@ -203,13 +203,8 @@ Created by pixpalette.com - online design magazine -->
                 price_value: 180000,
                 price_display: "Production",
                 description: `
-                * Push notification<br>
-                * Connect midtrans<br>
-                * List product<br>
-                * Cart<br>
-                * Profile setting<br>
-                * List ticket<br>
-                * List invoice
+                Aplikasi milik PT Wimbo yang bertujuan untuk memudahkan wisatawan dalam memesan homestay dan paket wisata khususnya lingkup Gunung Merapi Yogyakarta - Candi Borobudur.
+                Fitur utamanya seperti Push notification, Connect midtrans, List product, Cart, Profile setting, List ticket, List invoice.
                 `
             },
             {
@@ -220,13 +215,10 @@ Created by pixpalette.com - online design magazine -->
                 price_value: 180000,
                 price_display: "Production",
                 description: `
-                * Push notification<br>
-                * Setting harga<br>
-                * Audit stok<br>
-                * Mutasi stok<br>
-                * Pemusnahan stok<br>
-                * Assembly<br>
-                * Repacking
+                Lesja adalah aplikasi manajemen stok yang berfokus pada audit harga dan produksi barang, dibuat khusus untuk Lestari Jaya (salah satu supplier spare part otomotif di Semarang). Audit stok lebih mudah dilakukan dimana saja dan kapan saja.
+                Fitur utamanya seperti Setting harga, Audit stok, Mutasi stok, Pemusnahan stok, Assembly, Repacking.
+                <br><br>
+                Tech stack: Push notification
                 `
             },
             {
@@ -253,13 +245,24 @@ Created by pixpalette.com - online design magazine -->
             },
             {
                 img: "images/chatrox.jpg",
-                hyperlink: "https://youtu.be/TOW6T951zF8",
+                hyperlink: "https://gitlab.com/gaexe/chatrox-mvvm",
                 title: "Chatrox",
                 sub_title: "Kotlin",
                 price_value: 180000,
                 price_display: "Prototype",
                 description: `
                 Aplikasi ini untuk melayani konselor, moderator, dan pasien yang akan diproyeksikan ke situs ini: dokter.my dan biru.id.
+                `
+            },
+            {
+                img: "images/unspay.jpg",
+                hyperlink: "https://gitlab.com/gaexe/unspay",
+                title: "UNS Pay",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+                Aplikasi pembayaran khusus  untuk berbelanja di kantin atau merchant internal UNS.
                 `
             },
             {
