--- a/index.html
+++ b/index.html
@@ -276,6 +276,18 @@ Created by pixpalette.com - online design magazine -->
                 Aplikasi mekanik khusus supercar, dalam rangka memfasilitasi order secara online.
                 `
             },
+            {
+                img: "images/ph7.jpg",
+                hyperlink: "https://gitlab.com/gaexe/ph7-network",
+                title: "PH7 Network",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+                PH7 Network adalah perusahaan terapis di Yogyakarta. Ini adalah proyek skripsi milik sebuah perguruan tinggi di salah satu universitas di Yogyakarta.
+                <br><br>Saya telah menyelesaikan terapis online di Jogja alias PH7 Network dalam waktu seminggu.
+                `
+            },
 
 
         ];
