--- a/index.html
+++ b/index.html
@@ -160,32 +160,30 @@ Created by pixpalette.com - online design magazine -->
                 <div class="modal-body">
 
                     <div class="cart-information">
-                        <div class="ticket-type" id="idProduct"></div>
+                        <div class="ticket-type"></div>
                         <ul>
-                            <li>Item: <span class="ticket-count" id="idItems"></span></li>
-                            <li>Harga: <span class="ticket-amount" id="idPrice"></span></li>
+                            <li id="idProduct">Halo Wawan, saya hadir dari situs portfolio Anda dan perkenankan saya untuk memperkenalkan diri terlebih dahulu.</li>
                             <hr>
-                            <li>Total: <span class="total-amount" id="idTotal"></span></li>
                             <li><br></li>
                             <li><label style="font-size: 12px;"><input type="checkbox" class="tos" id="tos" name="tos"
-                                        value="Setuju" style="margin-right: 8px;" /> * Saya menyadari harga total belum
-                                    termasuk ongkos kirim</label></li>
+                                        value="Setuju" style="margin-right: 8px;" /> * Saya berkenan memperkenalkan diri
+                                    terlebih dahulu via whatsapp chat sebelum lebih jauh dengan panggilan
+                                    telepon</label></li>
                         </ul>
                     </div>
 
                     <div class="contactForm">
-                        <h3>Info Pembeli</h3>
+                        <h3>Info HRD</h3>
                         <form name="myForm">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Nama" name="fname">
+                                <input type="text" class="form-control" placeholder="Nama Lengkap" name="fname">
                             </div>
 
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Alamat Pengiriman" ,
-                                    name="faddress">
+                                <input type="text" class="form-control" placeholder="Instansi" , name="faddress">
                             </div>
                         </form>
-                        <button type="submit" class="btn" id="check-out" onclick="setUrl()">CHECKOUT</button>
+                        <button type="submit" class="btn" id="check-out" onclick="setUrl()">KIRIM</button>
                     </div>
 
                 </div>
@@ -365,35 +363,22 @@ Created by pixpalette.com - online design magazine -->
 
         function setUrl() {
             let product = document.getElementById("idProduct").textContent;
-            let items = document.getElementById("idItems").textContent;
-            let price = document.getElementById("idPrice").textContent;
-            let total = document.getElementById("idTotal").textContent;
-            let validator = items * price;
-            console.log(product.replace(/  +/g, '%0a'));
+            console.log(product);
 
             let name = document.forms["myForm"]["fname"].value;
             let address = document.forms["myForm"]["faddress"].value;
 
-            if (name != "" && address != "" && document.getElementById("tos").checked && validator == total) {
-                let url = "https://wa.me/+6281326771717?text=Product: "
-                    + product.replace(/  +/g, '%0a')
-                    + "============================::---%0aJumlah: "
-                    + items + " %0aHarga: "
-                    + price + " %0aTotal Bayar: "
-                    + total + " %0a"
-                    + "============================::---%0aNama: "
-                    + name + " %0aAlamat: "
-                    + address + " %0a"
-                    + "============================::---%0aTerm of Service: %0aDengan ini saya telah sadar dan menyetujui bahwa harga ongkir ditentukan secara terpisah tergantung pada jasa ekspedisi yang saya pilih"
-
+            if (name != "" && address != "" && document.getElementById("tos").checked) {
+                let url = "https://wa.me/+6281326771717?text="
+                    + product.replace(/  +/g, ' ')
+                    + "%0a%0aNama:%0a"
+                    + "*" + name + "*" + " %0a%0aInstansi:%0a"
+                    + "*" + address + "*" + " %0a"
                 window.open(url);
             } else if (!document.getElementById("tos").checked) {
-                alert("Anda belum setuju terkait harga ongkir terpisah!");
-            } else if (validator != total) {
-                alert("Eits!, ada hekel nih, lagi bokek ya :D wkwkwkwk!");
-            }
-            else {
-                alert("Mohon lengkapi NAMA dan ALAMAT LENGKAP PENGIRIMAN!");
+                alert("Harap setujui kebijakan perkenalan!");
+            } else {
+                alert("Mohon lengkapi NAMA LENGKAP dan INSTANSI");
             }
         }
     </script>
