fixing tos introduction

--- a/index.html
+++ b/index.html
@@ -158,18 +158,18 @@ Created by pixpalette.com - online design magazine -->
                     <h4 class="modal-title">Summary</h4>
                 </div>
                 <div class="modal-body">
-
                     <div class="cart-information">
                         <div class="ticket-type"></div>
                         <ul>
-                            <li id="idProduct">Halo Wawan, saya hadir dari situs portfolio Anda dan perkenankan saya
-                                untuk memperkenalkan diri terlebih dahulu.</li>
+                            <li id="idProduct">Halo Wawan, saya hadir dari situs personal Anda, perkenalkan saya..</li>
                             <hr>
                             <li><br></li>
-                            <li><label style="font-size: 12px;"><input type="checkbox" class="tos" id="tos" name="tos"
-                                        value="Setuju" style="margin-right: 8px;" /> * Saya berkenan memperkenalkan diri
-                                    terlebih dahulu via whatsapp chat sebelum lebih jauh dengan panggilan
-                                    telepon</label></li>
+                            <li>
+                                <label style="font-size: 12px;"><input type="checkbox" class="tos" id="tos" name="tos"
+                                        value="Setuju" style="margin-right: 8px;" />
+                                    * Saya berkenan memperkenalkan diri via whatsapp chat sebelum lebih jauh dengan panggilan telepon
+                                </label>
+                            </li>
                         </ul>
                     </div>
 
