--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@ Created by pixpalette.com - online design magazine -->
                         <div class="row">
                             <div class="col-xs-6">
                                 <p>
-                                    <span class="ticket-count"></span> Mempekerjakan saya 👉
+                                    <span class="ticket-count"></span> Hubungi saya 👉
                                 </p>
                             </div>
                             <div class="col-xs-6">
                                 <div class="text-right">
-                                    <a class="btn" data-toggle="modal" data-target="#ticket-details">CONTACT</a>
+                                    <a class="btn" data-toggle="modal" data-target="#ticket-details">KONTAK</a>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +155,7 @@ Created by pixpalette.com - online design magazine -->
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <img src="images/icons/cancel.png">
                     </button>
-                    <h4 class="modal-title">Summary</h4>
+                    <h4 class="modal-title">Rangkuman</h4>
                 </div>
                 <div class="modal-body">
                     <div class="cart-information">
@@ -184,6 +184,7 @@ Created by pixpalette.com - online design magazine -->
                                 <input type="text" class="form-control" placeholder="Instansi" , name="faddress">
                             </div>
                         </form>
+                        <br><br>
                         <button type="submit" class="btn" id="check-out" onclick="setUrl()">KIRIM</button>
                     </div>
 
