add batisithik & asahy

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@ Created by pixpalette.com - online design magazine -->
                                     Mengkonseptualisasikan solusi aplikasi dengan teknologi terkini dan desain UI/UX
                                     yang proporsional. Mengevaluasi dan mengoptimalkan UI/UX untuk mencapai pengalaman
                                     pengguna yang lebih baik. Pemahaman mendalam tentang Android Lifecycle, State
-                                    Management, Dependency Injection, Reactive Programming, Declarative UI and Error
+                                    Management, Dependency Injection, Reactive Programming, Declarative UI & Error
                                     Handling.</h4>
                                 <br>
-                                <h4>Berangkat dari keterbatasan dan mengupayakan kemajuan, bukan kesempurnaan.</h4>
+                                <h4>Berangkat dari keterbatasan dan mengupayakan kemajuan</h4>
                                 <br>
                                 <h4>Karir saya dimulai dari teknisi elektronik selama lebih dari 6 tahun, hal ini
                                     membuat kemampuan saya kental dengan logika dan pemecahan masalah. Pada tahun ke-3
                                     pengalaman itu, saya memiliki lingkaran orang-orang kreatif yang menunjukkan kepada
                                     saya cara menghasilkan uang secara online, itulah sebabnya saya memulai Blogging dan
                                     SEO hingga meninggalkan bidang elektronika. Terbiasa berinteraksi dengan hardware
-                                    dan logika elektronika sepertinya memberikan dampak positif terhadap saya dalam hal
-                                    mempelajari karakter robot perayap mesin pencari, termasuk pemrograman, debugging &
-                                    pemecahan masalah.</h4>
+                                    dan logika pemecahan masalah elektronika sepertinya memberikan dampak positif
+                                    terhadap saya dalam memahami karakter robot perayap mesin pencari, termasuk
+                                    Pemrograman & Debugging</h4>
                                 <br>
                                 <h4>Di tahun ke-4 pengalaman itu, saya kembali terjun ke dunia pendidikan dengan belajar
                                     sambil bekerja di perusahaan geodesi. Suatu ketika saya mengalami kegalauan karena
@@ -100,7 +100,7 @@ Created by pixpalette.com - online design magazine -->
                                     dunia elektronika dan totalitas menekuni dunia IT, termasuk Programming, Blogging &
                                     SEO.</h4>
                                 <br>
-                                <h4>Kematangan skill saya dibangun atas dasar wawasan berpikir kritis di dunia akademis
+                                <h4>Kematangan skill saya terbangun atas dasar wawasan berpikir kritis di dunia akademis
                                     dan dunia industri.</h4>
                                 <br>
                                 <h4>
@@ -167,7 +167,8 @@ Created by pixpalette.com - online design magazine -->
                             <li>
                                 <label style="font-size: 12px;"><input type="checkbox" class="tos" id="tos" name="tos"
                                         value="Setuju" style="margin-right: 8px;" />
-                                    * Saya berkenan memperkenalkan diri via whatsapp chat sebelum lebih jauh dengan panggilan telepon
+                                    * Saya berkenan memperkenalkan diri via whatsapp chat sebelum lebih jauh dengan
+                                    panggilan telepon
                                 </label>
                             </li>
                         </ul>
@@ -196,6 +197,30 @@ Created by pixpalette.com - online design magazine -->
     <script>
         let contents = [
             {
+                img: "images/asahy.jpg",
+                hyperlink: "https://www.linkedin.com/posts/wawanchahyonugroho_im-happy-to-share-this-asahy-salesman-project-activity-7211015296113868801-sKyY?utm_source=li_share&utm_content=feedcontent&utm_medium=g_dt_web&utm_campaign=copy",
+                alert: "",
+                title: "Asahy Salesman",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Production",
+                description: `
+App ini mempercepat proses salesman dalam mengeksekusi tanggung jawab mereka seperti marketing direct dan penagihan ke outlet-outlet bahan bangunan. Salah satu fitur unggulan aplikasi ini adalah aktivitas check-in tervalidasi dengan radius.
+`
+            },
+            {
+                img: "images/batisithik.jpg",
+                hyperlink: "https://www.linkedin.com/posts/wawanchahyonugroho_an-internal-point-of-sale-application-specifically-activity-7217828804281389056-7gi8?utm_source=share&utm_medium=member_desktop",
+                alert: "",
+                title: "BatisiTHIK",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Production",
+                description: `
+Aplikasi point of sale internal yang dirancang khusus untuk pemilik toko kosmetik terbesar di Semarang (Candra) untuk memberikan solusi bagi unit usaha kecilnya. Terhubung ke printer termal ESC/POS standar.
+`
+            },
+            {
                 img: "images/kreatormarket.jpg",
                 hyperlink: "https://play.google.com/store/apps/details?id=id.kreatormarket.kreatormarket",
                 alert: "",
@@ -207,6 +232,7 @@ Created by pixpalette.com - online design magazine -->
 Takeover legacy dengan metode sprint untuk membantu menyelesaikan target sebelum batas waktu, berkontribusi dalam hal: pebaikan bug & tambahan fitur: chat, lampiran, notifikasi, emoji, ui/ux, sso facebook, google, apple, push notifikasi, dll.. selain itu juga publikasi ke playstore & appstore.
 `
             },
+
             {
                 img: "images/pit.jpg",
                 hyperlink: "https://apps.apple.com/id/app/pitperdoskismg22/id1636837737",
@@ -308,6 +334,18 @@ Aplikasi pembayaran khusus  untuk berbelanja di kantin atau merchant internal UN
 `
             },
             {
+                img: "images/orderin.jpg",
+                hyperlink: "#",
+                alert: "Akses ke repository tidak tersedia!",
+                title: "Orderin",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+Sebuah aplikasi yang dirancang untuk memudahkan ibu rumah tangga memonetisasi bakat kulinernya. Tech stack: firebase, push notification, autocomplete location, peta gcp, current location, search location, drag location marker, distance matrix, dll.
+`
+            },
+            {
                 img: "images/supercar.jpg",
                 hyperlink: "https://gitlab.com/gaexe/hfw-supercar-apps",
                 alert: "",
@@ -319,6 +357,7 @@ Aplikasi pembayaran khusus  untuk berbelanja di kantin atau merchant internal UN
 Aplikasi mekanik khusus supercar, dalam rangka memfasilitasi order secara online.
 `
             },
+
             {
                 img: "images/ph7.jpg",
                 hyperlink: "https://gitlab.com/gaexe/ph7-network",
