add ois & patmed

--- a/index.html
+++ b/index.html
@@ -197,6 +197,30 @@ Created by pixpalette.com - online design magazine -->
     <script>
         let contents = [
             {
+                img: "images/ois.jpg",
+                hyperlink: "https://www.linkedin.com/posts/wawanchahyonugroho_the-clients-needs-require-application-distribution-activity-7141085857377042432-1og6?utm_source=share&utm_medium=member_desktop",
+                alert: "Akses ke repository tidak tersedia!",
+                title: "OIS GVP",
+                sub_title: "Kotlin",
+                price_value: 180000,
+                price_display: "Production",
+                description: `
+Mengkoordinasikan pengembangan aplikasi Gracia Visi Pratama untuk mengatasi permasalahan yang dihadapi oleh direktur, pemasar, dan teknisi di lapangan. Tech stack: push notification, current location, validator radius, camera access, gallery access, date range picker with validator variants per week, per next month, signature pad, deal with nested array, etc.
+`
+            },
+            {
+                img: "images/patmed.jpg",
+                hyperlink: "#",
+                alert: "Akses ke repository tidak tersedia!",
+                title: "Patriotmed",
+                sub_title: "Flutter",
+                price_value: 180000,
+                price_display: "Prototype",
+                description: `
+Berkontribusi dalam membuat konsep dan merealisasikannya dalam prototipe aplikasi seluler, awalnya dibuat dengan Kotlin kemudian migrasi ke Flutter. Aplikasi ini dirancang untuk mengelola kemelut antrian di layanan kesehatan Indonesia.
+`
+            },
+            {
                 img: "images/asahy.jpg",
                 hyperlink: "https://www.linkedin.com/posts/wawanchahyonugroho_im-happy-to-share-this-asahy-salesman-project-activity-7211015296113868801-sKyY?utm_source=li_share&utm_content=feedcontent&utm_medium=g_dt_web&utm_campaign=copy",
                 alert: "",
